click main body

--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -209,7 +209,7 @@
                 event.preventDefault()
 
               console.log('Click Article Link')
-              document.getElementById('btn-menu-toggle').click()
+              document.getElementById('mobile_wrap').click()
 
               // something is currently loading, ignore
               // if (isLoading == true)
