--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -220,9 +220,9 @@
 
               console.log('Click Article Link')
 
-              $('#panel-overlay').addClass('active')
-              $('#panel-overlay').css('display', 'block')
-              $('#panel-left').addClass('active')
+              $('#panel-overlay').removeClass('active')
+              $('#panel-overlay').css('display', '')
+              $('#panel-left').removeClass('active')
 
               // something is currently loading, ignore
               // if (isLoading == true)
