--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -33,10 +33,10 @@
                   {{subject.title}}
                 </a>
               </div>
-              <div style="font-size:12px;text-align:right;padding:0px 12px 12px 0px">
+              <div style="font-size:12px;height:22px;text-align:right;">
                 <a target="_blank" href="{{{site.url}}}">
-                  <img style="border-radius:50%;margin-right:4px" src="{{{site.image}}}=s28-c" />
-                  <small>{{site.name}} | {{subject.dateString}}</small>
+                  <img style="border-radius:50%;margin-left:4px;float:right" src="{{{site.image}}}=s28-c" />
+                  <span>{{subject.dateString}} | {{site.name}}</span>
                 </a>
               </div>
             </li>
