--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -35,8 +35,8 @@
               </div>
               <div style="font-size:12px;height:22px;text-align:right;">
                 <a target="_blank" href="{{{site.url}}}">
-                  <img style="border-radius:50%;margin-left:4px;float:right" src="{{{site.image}}}=s28-c" />
-                  <span>{{subject.dateString}} | {{site.name}}</span>
+                  <img style="border-radius:50%;margin-left:8px;margin-bottom:9px;float:right" src="{{{site.image}}}=s28-c" />
+                  <span style="float:initial;display:inline-block;margin-top:6px">{{subject.dateString}} | {{site.name}}</span>
                 </a>
               </div>
             </li>
