import vertexLib and mustache

--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -207,10 +207,12 @@
     </div>
 
     <script type="text/javascript">window.__PRELOADED__ = {{{preloaded}}}</script>
-    <script src="{{{cdn}}}/mobili/js/jquery-3.3.1.min.js"></script>
-    <script src="{{{cdn}}}/mobili/js/jquery.validate.min.js" ></script>
-    <script src="{{{cdn}}}/mobili/js/swiper.min.js"></script>
-    <script src="{{{cdn}}}/mobili/js/jquery.custom.js"></script>
+    <script type="text/javascript" src="{{{cdn}}}/scripts/vertex-lib.js"></script>
+    <script type="text/javascript" src="{{{cdn}}}/js/mustache.js"></script>
+    <script type="text/javascript" src="{{{cdn}}}/mobili/js/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="{{{cdn}}}/mobili/js/jquery.validate.min.js" ></script>
+    <script type="text/javascript" src="{{{cdn}}}/mobili/js/swiper.min.js"></script>
+    <script type="text/javascript" src="{{{cdn}}}/mobili/js/jquery.custom.js"></script>
 
     <script>
       (function(){
