header tags for mobile

--- a/medium/feed.mustache
+++ b/medium/feed.mustache
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Vertex 360</title>
-    <meta name="description" content="" />
+    <meta name="description" content="{{meta.description}}" />
 
     <meta property="og:title" content="{{meta.title}}" />
   	<meta property="og:type" content="article" />
