--- a/medium/mobile-feed.mustache
+++ b/medium/mobile-feed.mustache
@@ -5,9 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, minimal-ui">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
-  <link rel="apple-touch-startup-image" href="images/apple-touch-startup-image-640x920.png">
-  <title>mobili - mobile template</title>
+  <link rel="apple-touch-icon" href="{{{cdn}}}/mobili/images/apple-touch-icon.png" />
+  <link rel="apple-touch-startup-image" href="{{{cdn}}}/mobili/images/apple-touch-startup-image-640x920.png">
+  <title>Vertex 360</title>
+  <meta name="description" content="{{meta.description}}" />
 
   <link rel="stylesheet" href="{{{cdn}}}/mobili/css/swiper.css" />
   <link rel="stylesheet" href="{{{cdn}}}/mobili/style.css" />
@@ -298,7 +299,7 @@
 
         if (showSidebar==false)
           return
-          
+
         // slide out sidebar on initial page load
         setTimeout(function(){
           document.getElementById('btn-menu-toggle').click()
